fix commits unresolved